force-app/main/default/objects/ESS_Setting__c.object
<CustomObject>
    <fields>
        <fullName>LABIX_Tax__c</fullName>
        <label>LABIX Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Name_EN__c</fullName>
        <label>Letter : TES HR Name EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Name_TH__c</fullName>
        <label>Letter : TES HR Name TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Letter : TES HR Name</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>ESS Setting (Letter : TES HR Name)</relationshipLabel>
        <relationshipName>ESS_Setting_TES_HR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Position_TH__c</fullName>
        <label>Letter : TES HR Position TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Position__c</fullName>
        <label>Letter : TES HR Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Signature_EN__c</fullName>
        <label>Letter : TES HR Signature EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Signature_TH__c</fullName>
        <label>Letter : TES HR Signature TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_HR_Stamp__c</fullName>
        <label>Letter : TES HR Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_Logo__c</fullName>
        <label>Letter : TES Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TES_Request__c</fullName>
        <label>Letter : TES Request</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Name_EN__c</fullName>
        <label>Letter : TOP HR Name EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Name_TH__c</fullName>
        <label>Letter : TOP HR Name TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Letter : TOP HR Name</label>
        <referenceTo>PISUsers__c</referenceTo>
        <relationshipLabel>ESS Setting</relationshipLabel>
        <relationshipName>ESS_Setting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Position_TH__c</fullName>
        <label>Letter : TOP HR Position TH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Position__c</fullName>
        <label>Letter : TOP HR Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Signature_EN__c</fullName>
        <label>Letter : TOP HR Signature EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Signature_TH__c</fullName>
        <label>Letter : TOP HR Signature TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_HR_Stamp__c</fullName>
        <label>Letter : TOP HR Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_Logo__c</fullName>
        <label>Letter : TOP Logo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_TOP_Request__c</fullName>
        <label>Letter : TOP Request</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Tax__c</fullName>
        <label>Other Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TES_Tax__c</fullName>
        <label>TES Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TLB_Tax__c</fullName>
        <label>TLB Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOPTBK_Tax__c</fullName>
        <label>TOPTBK Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOPTSR_Tax__c</fullName>
        <label>TOPTSR Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOP_SPP_Tax__c</fullName>
        <label>TOP SPP Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TPX_Tax__c</fullName>
        <label>TPX Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TTC_Tax__c</fullName>
        <label>TTC Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TX_Tax__c</fullName>
        <label>TX Tax</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ESS Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESS-{0000}</displayFormat>
        <label>ESS Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>